# S-Bank

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: code-quality.yaml  pre-commit-config.yaml  test.yaml
DevEvents/: manage.py  requirements.txt
DevEvents/DevEvents/: asgi.py  settings.py  urls.py  wsgi.py
DevEvents/api/: serializers.py  views.py
DevEvents/events/: constants.py  models.py  serializers.py  urls.py  utils.py  views.py
DevEvents/events/api/: serializers.py  urls.py  views.py
DevEvents/events/management/: constants.py
DevEvents/events/management/commands/: populate_events.py
DevEvents/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_name_alter_category_slug_and_more.py
DevEvents/users/: constants.py  models.py  views.py
DevEvents/users/migrations/: 0001_initial.py
backend/DevEvents/DevEvents/: settings.py  urls.py
backend/DevEvents/events/: models.py
backend/DevEvents/events/api/: serializers.py  urls.py  views.py
backend/DevEvents/events/management/: constants.py
backend/DevEvents/events/migrations/: 0001_initial.py  0002_initial.py
backend/DevEvents/users/: urls.py  views.py
backend/DevEvents/users/migrations/: 0001_initial.py
backend/app/: Dockerfile  constants.py  main.py
backend/app/api/v1/: events.py
backend/app/config/: settings.py
backend/app/controllers/: events.py
backend/app/core/: constants.py
backend/app/core/config/: settings.py
backend/app/database/: connection.py
backend/app/domain/models/: enums.py  events.py  users.py
backend/app/domain/repositories/: event.py
backend/app/infrastructure/database/: base.py  config.py
backend/app/infrastructure/models/: __init__.py  associations.py  categories.py  enums.py  events.py  locations.py  organizers.py  profiles.py  users.py
backend/app/infrastructure/repositories/: event.py
backend/app/infrastructure/schemas/: base.py  types.py
backend/app/models/: __init__.py  constants.py  enums.py  events.py  users.py
backend/app/repositories/: event.py
backend/app/schemas/: base.py  types.py
backend/app/schemas/events/: category.py  event.py  location.py
backend/app/schemas/users/: organizer.py  profile.py  users.py
backend/src/: Dockerfile  main.py
backend/src/infrastructure/database/: base.py  config.py  constants.py  settings.py
backend/src/infrastructure/dependencies/: dependencies.py
backend/src/infrastructure/repositories/: event.py
backend/src/interfaces/cli/: commands.py
events/: constants.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: EventCard.svelte  Footer.svelte  Header.svelte  HomepageCategory.svelte
frontend/src/lib/types/: events.ts
frontend/src/lib/utils/: date.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/events/: +page.svelte
src/: Dockerfile  main.py
src/application/user_context/event_handlers/: __init__.py  user_registered_handler.py  user_verified_handler.py
src/application/user_context/services/: __init__.py  auth_service.py  customer_service.py  verification_service.py
src/common/: event_bus.py
src/common/exceptions/: __init__.py  base_exception.py  user_exceptions.py
src/domain/services/: auth_service.py  base_service.py  event_service.py  user_service.py
src/domain/user_context/entities/: __init__.py  customer.py  user.py
src/domain/user_context/events/: __init__.py  user_events.py
src/domain/user_context/repositories_interfaces/: __init__.py  user_repository_interface.py  user_statistics_repository.py
src/domain/user_context/services/: auth_service.py  user_service.py
src/domain/user_context/value_objects/: __init__.py  user_id.py
src/infrastructure/database/: base.py  config.py  constants.py  settings.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: __init__.py  associations_model.py  category_model.py  enums.py  event_model.py  location_model.py  organizer_model.py  profile_model.py  user_model.py
src/infrastructure/database/seeders/: base_seeder.py  constants.py  run_seeder.py
src/infrastructure/dependencies/: dependencies.py
src/infrastructure/external_services/: __init__.py  email_service.py
src/infrastructure/repositories/: base.py  event.py
src/interfaces/cli/: commands.py
users/: constants.py  models.py  views.py
(+156 files in other folders)
