[project]
name = "devevents"
version = "0.1.0"
description = ""
authors = [
    {name = "SokolovG",email = "griso2010@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "advanced-alchemy (==0.30.3)",
    "alembic (==1.14.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "asgiref (==3.8.1)",
    "asyncpg (==0.30.0)",
    "certifi (==2025.1.31)",
    "click (==8.1.8)",
    "dj-database-url (==2.3.0)",
    "django (==5.1.5)",
    "faker (==35.2.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "litestar (==2.14.0)",
    "litestar-htmx (==0.4.1)",
    "mako (==1.3.9)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "msgspec (==0.19.0)",
    "multidict (==6.1.0)",
    "multipart (==1.2.1)",
    "pillow (==11.1.0)",
    "polyfactory (==2.19.0)",
    "psycopg2-binary (==2.9.10)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.7.1)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (==6.0.2)",
    "rich (==13.9.4)",
    "rich-click (==1.8.5)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.37)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "backend" }
]