[project]
name = "devevents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy (==0.30.3)",
    "alembic==1.14.1",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "asgiref (==3.8.1)",
    "asyncpg (==0.30.0)",
    "certifi (==2025.1.31)",
    "click (==8.1.8)",
    "faker (==35.2.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "litestar (==2.14.0)",
    "litestar-htmx (==0.4.1)",
    "mako (==1.3.9)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "msgspec==0.19.0",
    "multidict (==6.1.0)",
    "multipart (==1.2.1)",
    "pillow (==11.1.0)",
    "polyfactory (==2.19.0)",
    "psycopg2-binary (==2.9.10)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.7.1)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (==6.0.2)",
    "rich (==13.9.4)",
    "rich-click (==1.8.5)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.37)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)",
    "mypy(==1.15.0)",
    "sqladmin-litestar-plugin>=0.2.0",
    "colorama>=0.4.6",
    "bcrypt>=4.3.0",
    "email-validator==2.2.0",
    "pre-commit>=4.2.0",
    "pep8-naming>=0.14.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "YTT", "ANN", "S", "A", "D"]
ignore = ["ANN102", "D100", "D101", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_generics = false


[tool.isort]
profile = "black"
line_length = 100
